# fithit

./: .gitignore  AGENTS.md  FINDINGS.md  Makefile  README.md  fithit.spec  pyproject.toml
.github/workflows/: release.yml
skills/: SKILL.md
src/fithitcli/: __main__.py  cli.py  fetch.py  info.py  parse.py  schema.py  search.py  validate.py
tests/: test_cli.py  test_link_checker.py  test_link_filter.py  test_parse.py  test_search.py
tests/fixtures/: workouts.sample.json
