[project]
name = "fithit-cli"
version = "0.1.0"
description = "CLI zum Parsen und Durchsuchen von Apple Fitness+ Workouts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
fithit = "fithitcli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fithitcli"]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
